Rename AthenzIdentityProviderImpl classes